2009-09-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, THANKS:
   Apply patch from Lex Trotman to make 'Reflow block/lines(s)'
   keybinding use line breaking column when enabled.
 * src/document.c:
   Fix showing the document before reload dialog when opening an
   already-open file.


2009-09-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Change 'Foo tab in preferences dialog' titles to 'Foo preferences'.
   Minor edits.
 * doc/geany.txt, doc/geany.html:
   Add 'Toolbar entries' section.
 * doc/geany.txt, doc/geany.html:
   Update 'Go to line' keybinding description.
 * doc/geany.txt, doc/geany.html:
   Split keybinding table into group tables; update KB links.


2009-09-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c:
   Fix compiler warnings about uninitialised variables.
 * src/callbacks.c, src/document.c:
   When reloading files, use the previously set encoding instead of
   detecting it again (closes #2862041).
 * configure.in:
   Turn on automake silent rules if supported.


2009-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Speed up sorting in utils_get_file_list(). This reduces the file
   browser delay on displaying a big directory, e.g. /usr/bin.
 * src/build.c:
   Expand command entry width when expanding Build Commands dialog.
 * src/build.c:
   Split Build Commands dialog notes label and edit text.
 * src/build.c:
   Add padding for Build Commands dialog separators.
   Add colons for regex field labels; fix 1 capitalisation.
 * src/build.c:
   Fix none filetype Build Commands dialog label.
   Make group labels bold.
 * src/build.c, src/ui_utils.h, src/dialogs.c, src/notebook.c,
   src/ui_utils.c:
   Add & use ui_label_set_markup(), ui_label_new_bold().
 * src/ui_utils.h, src/printing.c, src/tools.c, src/project.c,
   src/prefs.c, src/dialogs.c, src/geanyentryaction.c,